<resources>
    <string name="app_name">USC_NSBE_App</string>

    <string name="school_name">USC</string>
    <string name="org">NSBE</string>

    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="sign_in">Sign In</string>

    <string name="action_settings">Settings</string>
    <string name="create_account">Don\'t have an Account? Sign Up</string>
</resources>
