<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".LoginActivity"
    android:background="@color/cardinal">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/tommy_dusk_cardinal_fade"/>


    <ImageView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/nsbe_logo"
        android:layout_above="@+id/linearLayout_appTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/login_image"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:id="@+id/linearLayout_appTitle">

        <TextView
            android:id="@+id/textView_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_name"
            android:textSize="@dimen/title_text"
            android:textStyle="bold"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/textView_org"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/org"
            android:textSize="@dimen/title_text"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editText_height"
        android:layout_below="@id/linearLayout_appTitle"
        android:layout_marginTop="48dp"
        android:layout_marginStart="@dimen/login_sideMargins"
        android:layout_marginEnd="@dimen/login_sideMargins"
        android:paddingLeft="@dimen/editText_leftPadding"
        android:hint="@string/enter_username"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        android:textSize="@dimen/editText_textSize"
        android:drawableLeft="@drawable/ic_person_gray_24dp"
        android:drawablePadding="10dp"
        android:background="@drawable/login_edittext_style"/>

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editText_height"
        android:layout_below="@id/editText_username"
        android:layout_marginTop="4dp"
        android:layout_marginStart="@dimen/login_sideMargins"
        android:layout_marginEnd="@dimen/login_sideMargins"
        android:paddingLeft="@dimen/editText_leftPadding"
        android:hint="@string/enter_password"
        android:textColorHint="@color/gray"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="@dimen/editText_textSize"
        android:drawableLeft="@drawable/ic_lock_gray_24dp"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:background="@drawable/login_edittext_style"/>

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_sideMargins"
        android:layout_marginEnd="@dimen/login_sideMargins"
        android:layout_marginTop="@dimen/button_topMargin"
        android:text="@string/sign_in"
        android:background="@color/gold"
        android:layout_below="@id/editText_password"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signIn"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="@color/white"/>

</RelativeLayout>
